<resources>
    <string name="app_name">Examenes</string>
    <string name="labelInputNota1">Ingresar 1ra nota</string>
    <string name="labelInputNota2">Ingresar 2da nota</string>
    <string name="btnCalcularPromedio">Calcular promedio</string>
    <string name="labelInputUser">Ingresar usuario</string>
    <string name="labelInputPassword">Ingresar contraseña</string>
    <string name="checkRecordUser">Rocardar usuario</string>
    <string name="btnCrearUser">Crear usuario</string>
    <string name="btnIniciarSesion">Iniciar sesión</string>
    <string name="titleTermsAndCond">Terminos y Condiciones</string>
    <string name="aceptar">Aceptar</string>
    <string name="textTermsAndCond">
        The following Terms and Conditions apply to users, viewers and all people who access this Website. This Website is operated by GRILLS SPIRITS LTD, Registered Office: Unit 19, Creative Spark, Dundalk, Co. Louth, A91 HF77. Registered in Ireland Number: 632033

    Please read these terms carefully before using the Website. Using the Website indicates that you accept these terms. If you do not accept these terms, do not use the Website.

    TO ACCESS THE WEBSITE YOU MUST BE OF LEGAL DRINKING AGE IN THE COUNTRY WHERE YOU ARE VIEWING THIS SITE. IF YOU ARE NOT, DO NOT ENTER THIS SITE.

    All references to “our”, “us”, “we” or “Company” within this policy and within the opt-in notice are deemed to refer to GRILLS SPIRITS LTD, its subsidiaries, affiliates and associates.

    INTRODUCTION

    You may access most areas of the Website without registering your details with us. Certain areas of the Website are only open to you if you register.
    The Company may revise these Terms and Conditions at any time by updating this posting.
    It is your responsibility periodically to review this page for updates to these Terms and Conditions, which shall come into effect once posted. Your continued use of the Site will be deemed acceptance of these Terms and Conditions, including our Privacy and Cookies Notice.
    INTELLECTUAL PROPERTY

    Unless otherwise stated, the copyright and other intellectual property rights in all material on the Website (including without limitation trade marks, designs, logos, text, images, audio and video materials and bottle designs) are owned or licensed by the Company.
    Without limitation, the trademarks and all related logos, labels, bottle designs and all other intellectual property associated with the GRILLS SPIRITS LTD brand and its individual products are owned by the Company.
    Without prejudice to clause 4 of these Terms and Conditions, any other product names and images used in this Website are for identification purposes only. All trademarks and registered trademarks included in such product names and images are the property of their respective owners.
    Material from this site may not be copied, reproduced, republished, uploaded, posted, transmitted, distributed, commercially exploited or adapted in any way without the prior written consent of the Company.
    Any rights not expressly granted in these Terms and Conditions are reserved.
    SERVICE ACCESS and ACCEPTABLE USE

    The Company shall not be liable if for any reason the Website is unavailable at any time or for any period. Access to the Website may be suspended temporarily or permanently without notice.
    Without prejudice to Clause 9, the Company reserves the right to suspend, terminate or restrict access to the Website if these Terms and Conditions are breached.
    You shall keep any passwords and usernames allocated to you confidential and the Company reserves the right to suspend or terminate the username and password if the Company suspects non-compliance by you with these Terms and Conditions.
    You may use the Website only for lawful purposes. You may not use the Website: in any way that breaches any applicable local, national or international law or regulation; in any way that is unlawful or fraudulent or has any unlawful or fraudulent effect; to transmit, or procure the sending of, any unsolicited or unauthorised advertising or promotional material or any form of spam; to knowingly transmit any data, send or upload any material that contains viruses or similar computer code designed to adversely affect the operation of any computer software or hardware.
    SUBMISSIONS

    Other than personally identifiable information, which is covered under our Privacy and Cookies Notice, where you are invited to submit any contribution to this Website (including without limitation any text, graphics, video or audio) you grant the Company a perpetual, worldwide, royalty-free, non-exclusive, sublicensable right and license to use, reproduce, modify, adapt publish, translate, create derivative works from, distribute, perform, play, communicate to the public and exercise all copyright and publicity rights with respect to any such work and/or to incorporate it in other works in any media now known or later developed for the full term of any rights that may exist in such content, consistent with privacy restrictions set forth in the Company’s Privacy and Cookies Notice. If you do not wish to grant such rights to the Company, you should not submit your contribution to this Website.
    By submitting your content to this Website, you also:
    warrant that such contribution is your own original work and that you have the right to make it available to the Company for all the purposes specified above; and agree to waive any moral rights in your contribution for the purposes of its submission to and publication on the Website and the other purposes specified above.

    You agree not to submit any contribution that is not original to you or otherwise infringes the rights of, or that restricts or inhibits the use and enjoyment of this Website by, any third party. Your use and submission must not be unlawful, nor may it harass or cause distress or inconvenience to any person and will not contain obscene or offensive content or disrupt the normal flow of dialogue within this Website.
    You will not, nor will you encourage any other party, to make any statement or introduce any contribution which includes: swearing and/or unacceptable, indecent, defamatory, threatening, violent or discriminatory (based on race, religion, sex, sexual orientation, national origin, age or physical or mental disability) language; discussions that encourage, promote or provide information about illegal or criminal activities (including but not limited to pornography, explosives, weapons, violence, drugs, programming viruses, computer hacking and copyright infringement); posting of addresses for other web sites or content that infringes any third party’s intellectual property rights; exchanging telephone numbers or home addresses, the harassment of other users of the site (either privately or in a public forum), or the impersonation of our staff, celebrities or any other characters; actions that would disrupt or impair the functioning, stability or security of the site (including but not limited to the introduction of viruses, bugs, worms, Trojan horses or any other form of contaminants); advertisements, promotions, unsolicited approaches, or any other use of the site for unauthorized commercial purposes; and any derogatory remarks about the Company or the site.
    You agree to indemnify the Company against all legal fees, damages and other expenses that may be incurred by the Company as a result of a breach or suspected breach by you of any of the Terms or the rights of any third party or any violation by you of any law.
    Although we ask all Website users to adhere to these Terms, you acknowledge that other users may submit material that you consider offensive or objectionable. The Company assumes no responsibility or liability for the individual user content submitted to the Website and such submissions do not represent the views of the Company.
    In contributing to our Website you agree to grant us a royalty-free, non-exclusive license to publish and otherwise use the material in any way that we want, and in any media worldwide.
    LINKS TO OTHER WEBSITES

    Links to third party websites on the Website are provided solely for your convenience. If you use these links, you leave the Website. The Company has not reviewed all of these third party websites and does not control and is not responsible for these websites or their content or availability. The Company therefore does not endorse or make any representations about them, or any material found there, or any results that may be obtained from using them. If you decide to access any of the third party websites linked to the Website, you do so entirely at your own risk.
    RESTRICTION ON LIABILITY

    While the Company endeavours to ensure that the information on the Website is correct, the Company does not warrant the accuracy and completeness of the material on the Website. The Company may make changes to the material on the Website, or to the products and prices described in it, at any time without notice. The material on the Website may be out of date, and the Company makes no commitment to update such material. To the maximum extent permitted by law, the Company provides you with the Website on the basis that the Company excludes all representations, warranties, conditions and other terms (including, without limitation, the conditions implied by law).
    Subject to Clause 23, the Company, any other party (whether or not involved in creating, producing, maintaining or delivering the Website), and any of the Company’s group companies and the officers, directors, employees, shareholders or agents of any of them, exclude all liability and responsibility for any amount or kind of loss or damage that may result to you or a third party (including without limitation, any direct, indirect, punitive or consequential loss or damages, or any loss of income, profits, goodwill, data, contracts, use of money, or loss or damages arising from or connected in any way to business interruption, and whether in tort (including without limitation negligence), contract or otherwise) in connection with the Website in any way or in connection with the use, inability to use or the results of use of the Website, any websites linked to the Website or the material on such websites, including but not limited to loss or damage due to viruses that may infect your computer equipment, software, data or other property on account of your access to, use of, or browsing the Website or your downloading of any material from the Website or any websites linked to the Website.
    Nothing in these Terms and Conditions shall limit the Company’s liability for: death or personal injury caused by the negligence of the Company, its directors, agents, officers or representatives; fraud or fraudulent misrepresentation; or any other liability which cannot be excluded or limited by law.
    GOVERNING LAW AND JURISDICTION

    These Terms and Conditions shall be governed by and construed in accordance with the laws of Ireland. Disputes arising in connection with these Terms and Conditions shall be subject to the exclusive jurisdiction of the Irish courts although the Company retains the right to bring proceedings against you for breach of these Terms and Conditions in your country of residence or any other relevant country
    </string>
    <string name="descImgExamen1">Imagen examen 01</string>
    <string name="txtAgregar">Agregar</string>
    <string name="txtActive">Activo</string>
    <string name="txtHola">Hola</string>
    <string name="txtMateria">Materia</string>
    <string name="txtFecha">Fecha</string>
    <string name="txtGuardar">Guardar</string>
    <string name="txtAgregarExamen">Agregar examen</string>

</resources>