<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <include
        android:id="@+id/toolbal_new"
        layout="@layout/primary_toolbal"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAgregarExamen"
        android:textSize="24sp"
        android:layout_margin="24dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtMateria" />

    <EditText
        android:id="@+id/etMateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFecha" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:inputType="date"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="32dp"
        android:text="@string/txtGuardar" />

</LinearLayout>