<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"> <!-- El "wrap_content" permite que se adapte-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/labelInputNota1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editNota1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="number"
        android:text="10" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:text="@string/labelInputNota2"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editNota2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="number"
        android:text="10" />

    <Button
        android:id="@+id/btnPromedio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcularPromedio" />

</LinearLayout>